Appointment schedule module fix

--- a/src/app/demo/components/pages/appointment-schedule/appointment-schedule.component.html
+++ b/src/app/demo/components/pages/appointment-schedule/appointment-schedule.component.html
@@ -1,92 +1,86 @@
 <div class="container">
   <div class="form-section">
-    <h2 class="form-title">Appointment Schedule</h2>
+     <h2 class="form-title">Appointment Schedule Form</h2>
     <form [formGroup]="appointmentScheduleForm" (ngSubmit)="onSubmit()">
-      <div class="form-grid"></div>
-
+      <div class="form-grid">
+        <mat-form-field class="full-width">
+          <mat-label>Service Type</mat-label>
+          <mat-select formControlName="serviceType">
+            <mat-option value="Hair Cut">Hair Cut</mat-option>
+            <mat-option value="Hair Styling">Hair Styling</mat-option>
+            <mat-option value="Hair Coloring and Highlights">Hair Coloring and Highlights</mat-option>
+            <mat-option value="Facial Treatments">Facial Treatments</mat-option>
+            <mat-option value="Manicure & Pedicure">Manicure & Pedicure</mat-option>
+          </mat-select>
+          <span class="text-danger"
+            *ngIf="appointmentScheduleForm.get('serviceType') && appointmentScheduleForm.get('serviceType').touched && appointmentScheduleForm.get('serviceType').errors && appointmentScheduleForm.get('serviceType').errors['required']">
+            Select Service Type
+          </span>
+        </mat-form-field>
       <mat-form-field class="full-width">
-        <mat-label>Service Name</mat-label>
-        <input matInput placeholder="Enter Service Name" formControlName="serviceName"/>
-        <span class="text-danger"
-          *ngIf="appointmentScheduleForm.get('serviceName') && appointmentScheduleForm.get('serviceName').touched && appointmentScheduleForm.get('serviceName').errors && appointmentScheduleForm.get('serviceName').errors['required']">
-          Enter Service Name
-        </span>
-      </mat-form-field>
-      <mat-form-field class="full-width">
-        <mat-label>Service Description</mat-label>
-        <input matInput placeholder="Enter brief Description" formControlName="serviceDescription"/>
-        <span class="text-danger"
-          *ngIf="appointmentScheduleForm.get('serviceDescription') && appointmentScheduleForm.get('serviceDescription').touched && appointmentScheduleForm.get('serviceDescription').errors && appointmentScheduleForm.get('serviceDescription').errors['required']">
-          Enter brief Description
-        </span>
-      </mat-form-field>
-      <mat-form-field class="full-width">
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="serviceDate" />
-        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-        <span class="text-danger" *ngIf="(appointmentScheduleForm.get('serviceDate').touched || submitted) && appointmentScheduleForm.get('serviceDate').errors?.['required']">
-          Date is required
-        </span>
-      </mat-form-field>
-      <mat-form-field class="full-width">
-        <mat-label>Time</mat-label>
-        <input matInput formControlName="serviceTime" placeholder="e.g., 10:30 AM" />
-        <span class="text-danger" *ngIf="(appointmentScheduleForm.get('serviceTime').touched || submitted) && appointmentScheduleForm.get('serviceTime').errors?.['required']">
-          Time is required
-        </span>
-      </mat-form-field>
-
-      <button type="submit" mat-raised-button color="primary" class="form-button" [disabled]="isButtonDisabled">Save</button>
-      <button type="button" mat-raised-button color="accent" class="form-button" (click)="resetData()">Reset</button>
+          <mat-label>Service Description</mat-label>
+          <input matInput formControlName="serviceDescription" />
+          <span class="text-danger"
+            *ngIf="(appointmentScheduleForm.get('serviceDescription')?.touched || submitted) && appointmentScheduleForm.get('serviceDescription')?.errors?.['required']">
+            Service Description is required
+          </span>
+        </mat-form-field>
+       <mat-form-field class="full-width">
+          <mat-label>Appointment Date</mat-label>
+          <input matInput [matDatepicker]="picker" formControlName="appointmentDate" />
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <span class="text-danger"
+            *ngIf="(appointmentScheduleForm.get('appointmentDate')?.touched || submitted) &&appointmentScheduleForm.get('appointmentDate')?.errors?.['required']">
+            Appointment date is required
+          </span>
+        </mat-form-field>
+        </div>
+      <div class="button-group">
+        <button type="submit" mat-raised-button color="primary" class="form-button" [disabled]="isButtonDisabled">{{
+          saveButtonLabel }}</button>
+        <button type="reset" mat-raised-button color="secondary" class="form-button" (click)="resetData()">Reset</button>
+      </div>
     </form>
   </div>
 
-  <div class="table-section">
+  <div class="table-section mt-5">
+    <h2 class="form-title">Appointment Schedule Information</h2>
+
+    <div class="refresh-filter-section">
+      <div class="refresh-button">
+        <button mat-icon-button color="primary" (click)="refreshData()">
+          <mat-icon>refresh</mat-icon>
+        </button>
+      </div>
+      <br>
+
+      <mat-form-field class="filter">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+      </mat-form-field>
+    </div>
+
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-      <!-- Service Name Column -->
-      <ng-container matColumnDef="serviceName">
-        <th mat-header-cell *matHeaderCellDef>Service Name</th>
-        <td mat-cell *matCellDef="let element">{{element.serviceName}}</td>
+      <ng-container matColumnDef="serviceType">
+        <th mat-header-cell *matHeaderCellDef> Service Type </th>
+        <td mat-cell *matCellDef="let element"> {{element.serviceType}} </td>
       </ng-container>
-
-      <!-- Service Description Column -->
       <ng-container matColumnDef="serviceDescription">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element">{{element.serviceDescription}}</td>
+        <th mat-header-cell *matHeaderCellDef> Service Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.serviceDescription}} </td>
       </ng-container>
-
-      <!-- Date Column -->
-      <ng-container matColumnDef="serviceDate">
-        <th mat-header-cell *matHeaderCellDef>Date</th>
-        <td mat-cell *matCellDef="let element">{{element.serviceDate}}</td>
+      <ng-container matColumnDef="appointmentDate">
+        <th mat-header-cell *matHeaderCellDef> Appointment Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.appointmentDate}} </td>
       </ng-container>
-
-      <!-- Time Column -->
-      <ng-container matColumnDef="serviceTime">
-        <th mat-header-cell *matHeaderCellDef>Time</th>
-        <td mat-cell *matCellDef="let element">{{element.serviceTime}}</td>
-      </ng-container>
-
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="primary" (click)="editData(element)">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" (click)="deleteData(element)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight-row': selectedRow && selectedRow.id === row.id,
+        'last-added-row': lastAddedRow && lastAddedRow.id === row.id,
+        'last-edited-row': lastEditedRow && lastEditedRow.id === row.id}"></tr>
     </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of appointments"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
   </div>
 </div>
 
