--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,14 +1,10 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
         <img
-            src="assets/layout/images/{{
-                layoutService.config().colorScheme === 'light'
-                    ? 'logo-dark'
-                    : 'logo-white'
-            }}.svg"
-            alt="logo"
+            src="assets/layout/images/logo.png"
+            width="100%"
+            height="100%"
         />
-        <span>SAKAI</span>
     </a>
 
     <button
@@ -17,14 +13,6 @@
         (click)="layoutService.onMenuToggle()"
     >
         <i class="pi pi-bars"></i>
-    </button>
-
-    <button
-        #topbarmenubutton
-        class="p-link layout-topbar-menu-button layout-topbar-button"
-        (click)="layoutService.showProfileSidebar()"
-    >
-        <i class="pi pi-ellipsis-v"></i>
     </button>
 
     <div
@@ -36,19 +24,8 @@
         }"
     >
         <button class="p-link layout-topbar-button">
-            <i class="pi pi-calendar"></i>
-            <span>Calendar</span>
-        </button>
-        <button class="p-link layout-topbar-button">
             <i class="pi pi-user"></i>
             <span>Profile</span>
-        </button>
-        <button
-            class="p-link layout-topbar-button"
-            [routerLink]="'/documentation'"
-        >
-            <i class="pi pi-cog"></i>
-            <span>Settings</span>
         </button>
         <button class="p-link layout-topbar-button" (click)="logOutUser()">
             <i class="pi pi-sign-out"></i>
