--- a/src/app/demo/components/pages/client-reg/client-reg.component.html
+++ b/src/app/demo/components/pages/client-reg/client-reg.component.html
@@ -46,23 +46,53 @@
               <mat-error *ngIf="isInvalid('phoneNumber','pattern')">Invalid phone number</mat-error>
             </mat-form-field>
           </div>
-          <!-- User ID -->
+          <!-- Date of Birth -->
           <div class="col-md-6">
             <mat-form-field appearance="outline" class="w-100">
-              <mat-label>User ID</mat-label>
-              <input matInput formControlName="userID" />
-              <mat-error *ngIf="isInvalid('userID','required')">User ID is required</mat-error>
+              <mat-label>Date of Birth</mat-label>
+              <input matInput [matDatepicker]="dobPicker" formControlName="dateOfBirth" placeholder="Date of Birth">
+              <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
+              <mat-datepicker #dobPicker></mat-datepicker>
+              <mat-error *ngIf="isInvalid('dateOfBirth','required')">
+                Date of Birth is required
+              </mat-error>
             </mat-form-field>
           </div>
-          <!-- Password -->
+          <!-- Gender -->
           <div class="col-md-6">
             <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Password</mat-label>
-              <input matInput type="password" formControlName="password"/>
-              <mat-error *ngIf="isInvalid('password','required')">Password is required</mat-error>
+              <mat-label>Gender</mat-label>
+              <mat-select formControlName="gender">
+                <mat-option value="Male">Male</mat-option>
+                <mat-option value="Female">Female</mat-option>
+                <mat-option value="Other">Other</mat-option>
+              </mat-select>
+              <mat-error *ngIf="isInvalid('gender','required')">
+                Gender is required
+              </mat-error>
             </mat-form-field>
           </div>
-        </div>
+          <!-- Preferred Stylist -->
+          <div class="col-md-6">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Preferred Stylist</mat-label>
+              <mat-select formControlName="preferredStylist">
+                <mat-option *ngFor="let stylist of stylists" [value]="stylist.id">{{stylist.employeeName}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="isInvalid('preferredStylist','required')">
+                Preferred Stylist is required
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <!-- Allergies -->
+          <div class="col-md-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Allergies</mat-label>
+              <textarea matInput formControlName="allergies" placeholder="List any allergies or sensitivities"></textarea>
+            </mat-form-field>
+          </div>
+        </div>  <!-- Closing tag for row g-3 -->
+      
         <!-- Buttons -->
         <div class="d-flex justify-content-end mt-4">
           <button type="submit" mat-raised-button color="primary" [disabled]="isButtonDisabled">
@@ -117,6 +147,41 @@
           <ng-container matColumnDef="phoneNumber">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone </th>
             <td mat-cell *matCellDef="let element">{{ element.phoneNumber }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="dateOfBirth">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date of Birth </th>
+            <td mat-cell *matCellDef="let element">{{element.dateOfBirth | date:'mediumDate'}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+            <td mat-cell *matCellDef="let element">{{element.gender}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="preferredStylist">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Preferred Stylist </th>
+            <td mat-cell *matCellDef="let element">{{element.preferredStylist}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="allergies">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Allergies </th>
+            <td mat-cell *matCellDef="let element">{{element.allergies}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="totalVisits">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Visits </th>
+            <td mat-cell *matCellDef="let element">{{element.totalVisits}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="lastVisitedDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Visited </th>
+            <td mat-cell *matCellDef="let element">{{element.lastVisitedDate | date:'mediumDate'}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="lifetimeValue">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Lifetime Value </th>
+            <td mat-cell *matCellDef="let element">{{element.lifetimeValue | currency}}</td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
